--- a/src/sofar_assignment_pkg/package.xml
+++ b/src/sofar_assignment_pkg/package.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>robot_driver_pkg</name>
+  <name>sofar_assignment_pkg</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="mattia.musumeci@yahoo.it">ilmusu</maintainer>
+  <maintainer email="S4636216@studenti.unige.it">matteomaragliano</maintainer>
   <license>TODO: License declaration</license>
 
   <depend>rclpy</depend>
