--- a/src/robot_ui/package.xml
+++ b/src/robot_ui/package.xml
@@ -4,7 +4,9 @@
   <name>robot_ui</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="mattia.musumeci@yahoo.it">ilmusu</maintainer>
+  <maintainer email="4636216@studenti.unige.it">matteomaragliano</maintainer>
+  <maintainer email="4670261@studenti.unige.it">ilmusu</maintainer>
+  <maintainer email="4670964@studenti.unige.it">danipari</maintainer>
   <license>TODO: License declaration</license>
 
   <test_depend>ament_copyright</test_depend>
