--- a/src/my_bringup/package.xml
+++ b/src/my_bringup/package.xml
@@ -4,9 +4,9 @@
   <name>my_bringup</name>
   <version>1.0.12</version>
   <description>Bringup scripts and configurations for the Nav2 stack</description>
-  <maintainer email="4636216@studenti.unige.it">lkumarbe</maintainer>
-  <maintainer email="4670261@studenti.unige.it">lkumarbe</maintainer>
-  <maintainer email="4670964@studenti.unige.it">lkumarbe</maintainer>
+  <maintainer email="4636216@studenti.unige.it">matteomaragliano</maintainer>
+  <maintainer email="4670261@studenti.unige.it">ilmusu</maintainer>
+  <maintainer email="4670964@studenti.unige.it">danipari</maintainer>
   <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
